shoppingcart-netflix-OKD311-templates/oc-istio-injected-template/api-gateway-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: api-gateway-server
  labels:
    app: api-gateway-server
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway-server
        version: v1
    spec:
      selector:
        deploymentconfig: api-gateway-server
      containers:
        - image: vaanay/api-gateway-server
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8765
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: api-gateway-server
          ports:
          - containerPort: 8765
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              httpGet:
              path: /actuator/health
              port: 8765
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: api-gateway-server
    service: api-gateway-server
spec:
  ports:
  - port: 8765
    name: http
  selector:
    app: api-gateway-server
---
apiVersion: v1
kind: Route
metadata:
    name: api-gateway-server
spec:
    to:
      kind: Service
      name: api-gateway-service
