shoppingcart-netflix-OKD311-templates/oc-istio-injected-template/order.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
    name: order-service
    labels:
    app: order-service
    version: v1
spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: order-service
          version: v1
      spec:
        selector:
          deploymentconfig: order-service
        containers:
        - image: vaanay/order-service
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8383
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: order-service
          ports:
          - containerPort: 8383
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              httpGet:
              path: /actuator/health
              port: 8383
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    service: order-service
spec:
  ports:
  - port: 8383
    name: http
  selector:
    app: order-service
---
apiVersion: v1
kind: Route
metadata:
    name: order-service
spec:
    to:
      kind: Service
      name: order-service
