shoppingcart-netflix-OKD311-templates/oc-istio-injected-template/service-registry.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
    name: service-registry
    labels:
    app: service-registry
    version: v1
spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: service-registry
          version: v1
      spec:
        selector:
          deploymentconfig: service-registry
        containers:
         - image: vaanay/service-registry
           livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8761
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
           name: service-registry
        ports:
          - containerPort: 8761
            protocol: TCP
        readinessProbe:
            failureThreshold: 10
            httpGet:
              httpGet:
              path: /actuator/health
              port: 8761
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  labels:
    app: service-registry
    service: service-registry
spec:
  ports:
  - port: 8761
    name: http
  selector:
    app: service-registry
---
apiVersion: v1
kind: Route
metadata:
    name: service-registry
spec:
    to:
      kind: Service
      name: service-registry
