shoppingcart-netflix-OKD311-templates/oc-istio-injected-template/shoppingcart-ui.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: shoppingcart-ui
  lables:
    app: shoppingcart-ui
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shoppingcart-ui
        version: v1
    spec:
      selector:
        deploymentconfig: shoppingcart-ui
      containers:
        - image: vaanay/shoppingcart-ui
          name: shoppingcart-ui
          ports:
          - containerPort: 8080
            protocol: TCP
---
apiVersion: v1
kind: Route
metadata:
  name: shoppingcart-ui
spec:
  to:
   kind: Service
   name: shoppingcart-ui
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingcart-ui
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
      deploymentconfig: shoppingcart-ui
